@@ -2,7 +2,7 @@
 % file    : call.pl
 
 
-file_name('/home/diaz/GP/src/BipsPl/call.pl').
+file_name('/Users/diaz/GP/src/BipsPl/call.pl').
 
 
 predicate('$use_call'/0,41,static,private,monofile,built_in,[
@@ -181,19 +181,65 @@ predicate('$call_nth_exec'/2,126,static,private,monofile,built_in,[
     proceed]).
 
 
-predicate('$call'/4,137,static,private,monofile,built_in,[
+predicate(countall/2,150,static,private,monofile,built_in,[
+    allocate(3),
+    get_variable(y(0),1),
+    call_c('Pl_Set_Bip_Name_Untagged_2',[by_value],[countall,2]),
+    put_value(y(0),1),
+    call_c('Pl_Check_For_Un_Positive',[],[x(1)]),
+    put_variable(y(1),1),
+    get_integer(-1,1),
+    put_variable(y(2),1),
+    call('$countall_exec_goal'/2),
+    put_unsafe_value(y(1),0),
+    call_c('Pl_Fct_Inc',[y(1),fast_call],[x(0)]),
+    put_unsafe_value(y(2),0),
+    put_value(y(0),1),
+    put_unsafe_value(y(1),2),
+    deallocate,
+    execute('$countall/2_$aux1'/3)]).
+
+
+predicate('$countall/2_$aux1'/3,150,static,private,monofile,local,[
+    pragma_arity(4),
+    get_current_choice(x(3)),
+    try_me_else(1),
+    call_c('Pl_Blt_Var',[fast_call,boolean],[x(0)]),
+    cut(x(3)),
+    fail,
+
+label(1),
+    trust_me_else_fail,
+    get_value(x(2),1),
+    proceed]).
+
+
+predicate('$countall_exec_goal'/2,161,static,private,monofile,built_in,[
+    try_me_else(1),
+    put_atom(countall,1),
+    put_integer(2,2),
+    put_atom(true,3),
+    execute('$call'/4),
+
+label(1),
+    trust_me_else_fail,
+    get_atom(stop,1),
+    proceed]).
+
+
+predicate('$call'/4,171,static,private,monofile,built_in,[
     call_c('Pl_Save_Call_Info_3',[],[x(1),x(2),x(3)]),
     put_integer(0,1),
     execute('$call1'/2)]).
 
 
-predicate('$call1'/2,141,static,private,monofile,built_in,[
+predicate('$call1'/2,175,static,private,monofile,built_in,[
     put_integer(1,2),
     call_c('Pl_Load_Call_Info_Arg_1',[],[x(2)]),
     execute('$call_internal'/2)]).
 
 
-predicate('$call_internal'/2,145,static,private,monofile,built_in,[
+predicate('$call_internal'/2,179,static,private,monofile,built_in,[
     allocate(3),
     get_variable(y(0),0),
     get_variable(y(1),1),
@@ -211,7 +257,7 @@ predicate('$call_internal'/2,145,static,private,monofile,built_in,[
     execute('$call_internal1'/2)]).
 
 
-predicate('$$call_internal/2_$aux1'/1,145,static,private,monofile,local,[
+predicate('$$call_internal/2_$aux1'/1,179,static,private,monofile,local,[
     pragma_arity(2),
     get_current_choice(x(1)),
     try_me_else(1),
@@ -224,13 +270,13 @@ label(1),
     proceed]).
 
 
-predicate('$call_internal1'/2,155,static,private,monofile,built_in,[
+predicate('$call_internal1'/2,189,static,private,monofile,built_in,[
     pragma_arity(3),
     get_current_choice(x(2)),
     execute('$call_internal_with_cut'/3)]).
 
 
-predicate('$call_internal_with_cut'/3,162,static,private,monofile,built_in,[
+predicate('$call_internal_with_cut'/3,196,static,private,monofile,built_in,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(23),
@@ -377,7 +423,7 @@ label(23),
     proceed]).
 
 
-predicate('$call_internal_or'/4,212,static,private,monofile,built_in,[
+predicate('$call_internal_or'/4,246,static,private,monofile,built_in,[
     pragma_arity(5),
     get_current_choice(x(4)),
     try_me_else(6),
@@ -429,7 +475,7 @@ label(7),
     execute('$call_internal_with_cut'/3)]).
 
 
-predicate('$$call_internal_or/4_$aux2'/5,219,static,private,monofile,local,[
+predicate('$$call_internal_or/4_$aux2'/5,253,static,private,monofile,local,[
     try_me_else(1),
     allocate(4),
     get_variable(y(0),1),
@@ -452,7 +498,7 @@ label(1),
     execute('$call_internal_with_cut'/3)]).
 
 
-predicate('$$call_internal_or/4_$aux1'/6,212,static,private,monofile,local,[
+predicate('$$call_internal_or/4_$aux1'/6,246,static,private,monofile,local,[
     try_me_else(1),
     allocate(4),
     get_variable(y(0),1),
@@ -475,17 +521,17 @@ label(1),
     execute('$call_internal_with_cut'/3)]).
 
 
-predicate('$call_from_debugger'/2,235,static,private,monofile,built_in,[
+predicate('$call_from_debugger'/2,269,static,private,monofile,built_in,[
     put_integer(0,2),
     call_c('Pl_BC_Call_Terminal_Pred_3',[jump],[x(0),x(1),x(2)]),
     proceed]).
 
 
-predicate(false/0,240,static,private,monofile,built_in,[
+predicate(false/0,274,static,private,monofile,built_in,[
     fail]).
 
 
-predicate(forall/2,246,static,private,monofile,built_in,[
+predicate(forall/2,280,static,private,monofile,built_in,[
     get_variable(x(2),0),
     put_structure((',')/2,0),
     unify_local_value(x(2)),
@@ -498,11 +544,11 @@ predicate(forall/2,246,static,private,monofile,built_in,[
     execute('$not'/3)]).
 
 
-predicate('$not'/3,250,static,private,monofile,built_in,[
+predicate('$not'/3,284,static,private,monofile,built_in,[
     execute('$$not/3_$aux1'/3)]).
 
 
-predicate('$$not/3_$aux1'/3,250,static,private,monofile,local,[
+predicate('$$not/3_$aux1'/3,284,static,private,monofile,local,[
     pragma_arity(4),
     get_current_choice(x(3)),
     try_me_else(1),
@@ -552,7 +598,16 @@ predicate('$$prop_meta_pred/3_$aux5'/3,82,static,private,monofile,local,[
     proceed]).
 
 
-predicate('$$prop_meta_pred/3_$aux6'/3,244,static,private,monofile,local,[
+predicate('$$prop_meta_pred/3_$aux6'/3,148,static,private,monofile,local,[
+    get_atom(countall,0),
+    get_integer(2,1),
+    get_structure(countall/2,2),
+    unify_integer(0),
+    unify_atom(?),
+    proceed]).
+
+
+predicate('$$prop_meta_pred/3_$aux7'/3,278,static,private,monofile,local,[
     get_atom(forall,0),
     get_integer(2,1),
     get_structure(forall/2,2),
@@ -619,8 +674,20 @@ directive(82,system,[
     execute('$add_clause_term'/2)]).
 
 
-directive(244,system,[
+directive(148,system,[
     call_c('Pl_Emit_BC_Execute_Wrapper',[by_value],['$prop_meta_pred',3,&,'$$prop_meta_pred/3_$aux6',3]),
+    put_structure('$prop_meta_pred'/3,0),
+    unify_atom(countall),
+    unify_integer(2),
+    unify_structure(countall/2),
+    unify_integer(0),
+    unify_atom(?),
+    put_atom('call.pl',1),
+    execute('$add_clause_term'/2)]).
+
+
+directive(278,system,[
+    call_c('Pl_Emit_BC_Execute_Wrapper',[by_value],['$prop_meta_pred',3,&,'$$prop_meta_pred/3_$aux7',3]),
     put_structure('$prop_meta_pred'/3,0),
     unify_atom(forall),
     unify_integer(2),
